<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="uz.triples.qulaymarket.login.login_or_register.login_page.LoginPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/telefon_raqamyoki_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/enterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/parol"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enterBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@color/lightBlue"
            android:padding="16dp"
            android:text="@string/kirish"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/forgetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Parolni unutdingizmi?"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterBtn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>